# DocLens

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 5f1a928a54d5_add_documents_document_chunks_message_.py  64658acba830_add_chunk_type_fts_index.py  9eda9e392408_create_users_chat_sessions_messages.py
backend/app/: main.py  users.py  worker.py
backend/app/api/: auth.py  chat.py  documents.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  chat.py  document.py  user.py
backend/app/schemas/: chat.py  document.py
backend/app/services/: embeddings.py  ingestion.py  llm.py  retrieval.py  storage.py  vector_store.py
backend/app/static/: index.html
backend/app/static/css/: style.css
backend/app/static/js/: app.js  scene.js
eval/: questions.json  results.json  results_direct.json  run_eval.py
